
[build-system]
requires = ["setuptools >= 75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "signal_wordcloud"
version = "0.1.0"
description = ""
requires-python = "~=3.12"
dependencies = [
  "pyright==1.1.383",
  "black==24.8.0",
  "ipython==8.28.0",
  "wordcloud==1.9.3",
  "matplotlib==3.9.2"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "Linux"
stubPath = "./typings"
